update contact people on contact page

--- a/app/_includes/contact-people.html
+++ b/app/_includes/contact-people.html
@@ -15,19 +15,19 @@
 
             <div class="text-overlay">
               <div class="info">
-                <a href="mailto:ron@cinmine.com" class="contact-info">ron@cinmine.com</a>
-                <a href="tel:+15137284040" class="contact-info">513-728-4040</a>
+                <a href="mailto:jbratcher@bellsouth.net" class="contact-info">jbratcher@bellsouth.net</a>
+                <a href="tel:+15133747184" class="contact-info">513-374-7184</a>
               </div><!-- /.info -->
             </div><!-- /.text-overlay -->
 
-            <img src="/images/people/portriat.png">
+            <img src="/images/people/jason.jpg">
 
           </div><!-- /.member-image -->
 
           <figcaption class="member-details bordered no-top-border">
             <h3>
-              John Smith
-              <span>General Manager</span>
+              Ron Paolello
+              <span>Something</span>
             </h3>
           </figcaption>
 
@@ -41,19 +41,75 @@
 
             <div class="text-overlay">
               <div class="info">
-                <a href="mailto:ron@cinmine.com" class="contact-info">ron@cinmine.com</a>
-                <a href="tel:+15137284040" class="contact-info">513-728-4040</a>
+                <a href="mailto:nathanh3@verizon.net" class="contact-info">nathanh3@verizon.net</a>
+                <a href="tel:+15132569883" class="contact-info">513-256-9883</a>
               </div><!-- /.info -->
             </div><!-- /.text-overlay -->
 
-            <img src="/images/people/portriat.png">
+            <img src="/images/people/nathan.jpg">
 
           </div><!-- /.member-image -->
 
           <figcaption class="member-details bordered no-top-border">
             <h3>
-              John Smith
-              <span>General Manager</span>
+              Bobby Stenger
+              <span>Something</span>
+            </h3>
+          </figcaption>
+
+        </figure>
+      </div><!-- /.col -->
+
+    </div><!-- /.row -->
+
+    <div class="row thumbs gap-md text-center">
+
+      <div class="col-sm-6 thumb">
+        <figure class="member">
+
+          <div class="member-image">
+
+            <div class="text-overlay">
+              <div class="info">
+                <a href="mailto:jbratcher@bellsouth.net" class="contact-info">jbratcher@bellsouth.net</a>
+                <a href="tel:+15133747184" class="contact-info">513-374-7184</a>
+              </div><!-- /.info -->
+            </div><!-- /.text-overlay -->
+
+            <img src="/images/people/jason.jpg">
+
+          </div><!-- /.member-image -->
+
+          <figcaption class="member-details bordered no-top-border">
+            <h3>
+              Jason Bratcher
+              <span>Eastern KY Sales Rep</span>
+            </h3>
+          </figcaption>
+
+        </figure>
+      </div><!-- /.col -->
+
+      <div class="col-sm-6 thumb">
+        <figure class="member">
+
+          <div class="member-image">
+
+            <div class="text-overlay">
+              <div class="info">
+                <a href="mailto:nathanh3@verizon.net" class="contact-info">nathanh3@verizon.net</a>
+                <a href="tel:+15132569883" class="contact-info">513-256-9883</a>
+              </div><!-- /.info -->
+            </div><!-- /.text-overlay -->
+
+            <img src="/images/people/nathan.jpg">
+
+          </div><!-- /.member-image -->
+
+          <figcaption class="member-details bordered no-top-border">
+            <h3>
+              Nathan Hickman
+              <span>West Virginia Sales Rep</span>
             </h3>
           </figcaption>
 
@@ -71,19 +127,19 @@
 
             <div class="text-overlay">
               <div class="info">
-                <a href="mailto:ron@cinmine.com" class="contact-info">ron@cinmine.com</a>
-                <a href="tel:+15137284040" class="contact-info">513-728-4040</a>
+                <a href="mailto:paulls@horizonview.net" class="contact-info">paulls@horizonview.net</a>
+                <a href="tel:+15132569884" class="contact-info">513-256-9884</a>
               </div><!-- /.info -->
             </div><!-- /.text-overlay -->
 
-            <img src="/images/people/portriat.png">
+            <img src="/images/people/paul.jpg">
 
           </div><!-- /.member-image -->
 
           <figcaption class="member-details bordered no-top-border">
             <h3>
-              John Smith
-              <span>General Manager</span>
+              Paul Saunders
+              <span>Ohio, Pennsylvania and Northern WV Sales Rep</span>
             </h3>
           </figcaption>
 
@@ -97,19 +153,19 @@
 
             <div class="text-overlay">
               <div class="info">
-                <a href="mailto:ron@cinmine.com" class="contact-info">ron@cinmine.com</a>
-                <a href="tel:+15137284040" class="contact-info">513-728-4040</a>
+                <a href="mailto:clarksen@hotmail.com" class="contact-info">clarksen@hotmail.com</a>
+                <a href="tel:+15132569882" class="contact-info">513-256-9882</a>
               </div><!-- /.info -->
             </div><!-- /.text-overlay -->
 
-            <img src="/images/people/portriat.png">
+            <img src="/images/people/kevin.jpg">
 
           </div><!-- /.member-image -->
 
           <figcaption class="member-details bordered no-top-border">
             <h3>
-              John Smith
-              <span>General Manager</span>
+              Kevin Clark
+              <span>Westerm KY Sales Rep</span>
             </h3>
           </figcaption>
 
