--- a/app/styles/page/_contact.scss
+++ b/app/styles/page/_contact.scss
@@ -13,9 +13,14 @@
 
   .contact-info {
     color: white;
+
+    &:last-child {
+      display: block;
+    }
   }
 
   .thumbs .thumb .text-overlay {
     background: rgba($green, .9);
+    word-break: break-word;
   }
 }
