make contact form for general inquiries

--- a/app/_includes/contact-form.html
+++ b/app/_includes/contact-form.html
@@ -4,7 +4,7 @@
 
   <section id="contact-form">
 
-    <h2>Leave a Message</h2>
+    <h2>Have a general inquiry?</h2>
 
     <form id="contactform" class="forms" action="contact.php" method="post">
 
@@ -18,21 +18,8 @@
       </div><!-- /.row -->
 
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           <input type="text" name="subject" class="form-control" placeholder="Subject">
-        </div><!-- /.col -->
-        <div class="col-sm-6">
-          <select class="territory">
-            <option value="volvo"><span>Eastern KY</span></option>
-            <option value="saab"><span>Virginia</span></option>
-            <option value="mercedes"><span>Western KY</span></option>
-            <option value="audi"><span>Illinois</span></option>
-            <option value="audi"><span>West Virginia</span></option>
-            <option value="audi"><span>Northern WV</span></option>
-            <option value="audi"><span>Ohio</span></option>
-            <option value="audi"><span>Pennsylvania</span></option>
-            <option value="audi"><span>Other</span></option>
-          </select>
         </div><!-- /.col -->
       </div><!-- /.row -->
 
