--- a/app/_includes/shared/header.html
+++ b/app/_includes/shared/header.html
@@ -23,14 +23,14 @@
 
           <!-- ============================================================= LOGO ============================================================= -->
 
-          <a class="navbar-brand" href="/"><img src="/images/logo.svg" class="logo" alt="Cincinnati Mine Machinery Co." data-0="max-height: 50px;" data-300="max-height: 35px;"></a>
+          <a class="navbar-brand" href="/"><img src="/images/logo.svg" class="logo" alt="Cincinnati Mine Machinery Co." data-0="max-height: 80px; min-height: 80px;" data-300="max-height: 50px; min-height: 50px;"></a>
 
           <!-- ============================================================= LOGO : END ============================================================= -->
 
 
           <!-- ============================================================= MAIN NAVIGATION ============================================================= -->
 
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav" data-0="padding-top: 22px;" data-300="padding-top: 0;">
 
             <li class="dropdown">
               <a href="/products">Products</a>
