--- a/app/styles/component/_header.scss
+++ b/app/styles/component/_header.scss
@@ -33,7 +33,7 @@
     &:focus {
         background-color: transparent;
         border-color: transparent;
-        color: lighten(#9c954a, 10);
+        color: lighten(#868835, 10);
     }
   }
 }
