--- a/app/styles/page/_homepage.scss
+++ b/app/styles/page/_homepage.scss
@@ -1,6 +1,6 @@
 .homepage {
   #hero .item:before {
-    background: rgba(#117156, 0.75);
+    background: rgba(20,20,10, 0.75);
     content: ' ';
     position: absolute;
     width: 100%;
@@ -15,7 +15,7 @@
 
   #who-we-are {
     .icon i.icn {
-      color: #117156;
+      color: #868835;
     }
   }
 
