--- a/app/styles/reen/green.scss
+++ b/app/styles/reen/green.scss
@@ -26,12 +26,12 @@ a:focus,
 ul.arrowed li:before,
 ul.circled li:before,
 .yamm .yamm-content a:hover {
-	color: #9c954a;
+	color: #868835;
 }
 
 .tint-bg .btn,
 .tint-color {
-	color: #9c954a;
+	color: #868835;
 }
 
 .btn,
@@ -59,7 +59,7 @@ ul.circled li:before,
 .tint-bg.img-bg-soft:before,
 .tint-bg.img-bg-softer:before,
 .tooltip-inner {
-	background-color: #9c954a;
+	background-color: #868835;
 }
 
 .btn:hover,
@@ -72,7 +72,7 @@ ul.circled li:before,
 .pagination > .active > span:hover,
 .pagination > li > a:hover,
 .pagination > li > a:focus {
-	background-color: lighten(#9c954a, 20);
+	background-color: lighten(#868835, 20);
 }
 
 
@@ -80,7 +80,7 @@ ul.circled li:before,
 .items li .text-overlay,
 .owl-carousel .item .text-overlay,
 .thumbs .thumb .text-overlay {
-	background-color: rgba(26, 187, 156, 0.9);
+	background-color: rgba(#868835, 0.9);
 }
 
 .classic-blog .post .date,
@@ -90,29 +90,29 @@ ul.circled li:before,
 .tabs-circle-top .tab a:hover,
 .tabs-side .tab a:hover,
 .tabs-top .tab a:hover {
-	border-color: #9c954a;
+	border-color: #868835;
 }
 
 .tooltip.top .tooltip-arrow,
 .tooltip.top-left .tooltip-arrow,
 .tooltip.top-right .tooltip-arrow {
-	border-top-color: #9c954a;
+	border-top-color: #868835;
 }
 .tooltip.right .tooltip-arrow {
-	border-right-color: #9c954a;
+	border-right-color: #868835;
 }
 .tooltip.left .tooltip-arrow {
-	border-left-color: #9c954a;
+	border-left-color: #868835;
 }
 .tooltip.bottom .tooltip-arrow,
 .tooltip.bottom-left .tooltip-arrow,
 .tooltip.bottom-right .tooltip-arrow {
-	border-bottom-color: #9c954a;
+	border-bottom-color: #868835;
 }
 
 #owl-main .caption h1 span.tint-bg,
 #owl-main .caption p span.tint-bg  {
-	box-shadow: -.500em 0 0 #9c954a, .500em 0 0 #9c954a;
+	box-shadow: -.500em 0 0 #868835, .500em 0 0 #868835;
 }
 
 ::selection {
