update copy regarding mission and about information

--- a/app/_includes/about-info.html
+++ b/app/_includes/about-info.html
@@ -6,12 +6,12 @@
 
             <div class="col-sm-6 inner-right-xs inner-bottom-xs">
               <h2>Who we are</h2>
-              <p>Magnis modipsae que lib voloratati andigen daepeditem quiate ut reporemni aut labor. Laceaque quiae sitiorem rest non restibusaes es tumquam core posae volor remped modis volor. Doloreiur qui commolu ptatemp dolupta oreprerum tibusam. Eumenis et consent accullignis dentibea autem inisita posae volor conecus resto explabo.</p>
+              <p>Our Mission is to exceed our customers' expectations. Through continuous improvement, innovative thinking and time-honored values, we deliver quality, reliability and superior performance. With our people, partners and products, we are THE STRONGEST LINK™ in the mining industry.</p>
             </div><!-- /.col -->
 
             <div class="col-sm-6 inner-left-xs inner-bottom-xs">
               <h2>What we do</h2>
-              <p>Laceaque quiae sitiorem rest non restibusaes es tumquam core posaeremni volor remped modis volor. Doloreiur qui commolu dolor oreprerum tibusam. Eumenis et consent accullignis dentibea autem inisita posae volor conecus resto explabo. Magnis modipsae que lib voloratati andigen daepeditem quiate ut reporemni aut labor.</p>
+              <p>We make mine machinery equipment and have been for nearly a century. At The Cincinnati Mine Machinery Company, quality is the driver of the entire product focus, manufacturing processes and the company-wide commitment to continuous improvement. Our customers desire reliable, quality products and our commitment is to provide that at a fair price, allowing us to utilize the best manufacturing tools and raw materials available. </p>
             </div><!-- /.col -->
 
           </div><!-- /.row -->
