--- a/app/_includes/landing-services.html
+++ b/app/_includes/landing-services.html
@@ -7,7 +7,7 @@
       <div class="col-md-8 col-sm-9 center-block text-center">
         <header>
           <h1>The strongest link.</h1>
-          <p class="text-small">Cincinnati Mine Machinery Company is a high-quality solution for those who want durable mining equipment that doesn't break down like the other guys. We pride ourselves on providing the highest quality machinery - we have perfected this art over the last 90 years.</p>
+          <p class="text-small">Our Mission is to exceed our customers' expectations. Through continuous improvement, innovative thinking and time-honored values, we deliver quality, reliability and superior performance. With our people, partners and products, we are THE STRONGEST LINK™ in the mining industry.</p>
         </header>
       </div><!-- /.col -->
     </div><!-- /.row -->
@@ -19,23 +19,23 @@
           <i class="icon-star-empty-1 icn"></i>
         </div><!-- /.icon -->
         <h2>Quality</h2>
-        <p class="text-small">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+        <p class="text-small">Total Quality Management is both a philosophy and a set of guiding principles that represent the foundation of a continuously improving organization at Cincinnati Mine Machinery Company. TQM is the application of quantitative methods and human resources to improve the material and services supplied to an organization, all the processes within an organization, and the degree to which the needs of the customer are met, now and in the future.</p>
       </div><!-- /.col -->
 
       <div class="col-sm-4 inner-bottom-xs">
         <div class="icon">
           <i class="icon-tools icn"></i>
         </div><!-- /.icon -->
-        <h2>Durable</h2>
-        <p class="text-small">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+        <h2>Strength</h2>
+        <p class="text-small">To become the supplier of choice to our customers by consistently offering the best product available. In making decisions, we must recognize that our customer’s judge us not on our selling price alone, but the life achieved on our products compared to the O.E.M. products. The nature of our business requires a long-term relationship with our customers, to work with them to improve productively and reduce costs.</p>
       </div><!-- /.col -->
 
       <div class="col-sm-4 inner-bottom-xs">
         <div class="icon">
           <i class="icon-award icn"></i>
         </div><!-- /.icon -->
-        <h2>Proven</h2>
-        <p class="text-small">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+        <h2>Expertise</h2>
+        <p class="text-small">Quality starts with our people and our relationships, with dedicated long time suppliers, we provide products engineered to reliably meet your needs. Establishing true quality is more than documentation of deviations, it is a mentality, and desire in all to produce products efficiently and continually improve. Our customers desire reliable, quality products and our commitment is to provide that at a fair price, allowing us to utilize the best manufacturing tools and raw materials available.</p>
       </div><!-- /.col -->
     </div><!-- /.row -->
   </div><!-- /.container -->
