update ron’s info on the contact us page

--- a/app/_includes/contact-people.html
+++ b/app/_includes/contact-people.html
@@ -15,19 +15,20 @@
 
             <div class="text-overlay">
               <div class="info">
-                <a href="mailto:jbratcher@bellsouth.net" class="contact-info">jbratcher@bellsouth.net</a>
-                <a href="tel:+15133747184" class="contact-info">513-374-7184</a>
+                <a href="mailto:ron@cinmine.com" class="contact-info">ron@cinmine.com</a>
+                <a href="tel:+15137284040" class="phone contact-info">Work: 513-728-4040</a>
+                <a href="tel:+15132569881" class="phone contact-info">Cell: 513-256-9881</a>
               </div><!-- /.info -->
             </div><!-- /.text-overlay -->
 
-            <img src="/images/people/jason.jpg">
+            <img src="/images/people/ron.jpg">
 
           </div><!-- /.member-image -->
 
           <figcaption class="member-details bordered no-top-border">
             <h3>
               Ron Paolello
-              <span>Something</span>
+              <span>General Manager</span>
             </h3>
           </figcaption>
 
@@ -41,19 +42,20 @@
 
             <div class="text-overlay">
               <div class="info">
-                <a href="mailto:nathanh3@verizon.net" class="contact-info">nathanh3@verizon.net</a>
-                <a href="tel:+15132569883" class="contact-info">513-256-9883</a>
+                <a href="mailto:rcstenger@cinmine.com" class="contact-info">rcstenger@cinmine.com</a>
+                <a href="tel:+15137284040" class="phone contact-info">Work: 513-728-4040</a>
+                <a href="tel:+15132569890" class="phone contact-info">Cell: 513-256-9890</a>
               </div><!-- /.info -->
             </div><!-- /.text-overlay -->
 
-            <img src="/images/people/nathan.jpg">
+            <img src="/images/people/bobby.jpg">
 
           </div><!-- /.member-image -->
 
           <figcaption class="member-details bordered no-top-border">
             <h3>
-              Bobby Stenger
-              <span>Something</span>
+              Robert C. Stenger
+              <span>Director of Sales and Marketing</span>
             </h3>
           </figcaption>
 
