update products dropdown menu

--- a/app/_includes/shared/header.html
+++ b/app/_includes/shared/header.html
@@ -33,7 +33,16 @@
           <ul class="nav navbar-nav" data-0="padding-top: 22px;" data-300="padding-top: 0;">
 
             <li class="dropdown">
-              <a href="/products">Products</a>
+              <a class="dropdown-toggle js-activated" href="#">Products</a>
+
+              <ul class="dropdown-menu">
+                <li><a href="/products">Borer Miner Products</a></li>
+                <li><a href="/products">Continuous Miner Products</a></li>
+                <li><a href="/products">Cutter Bars &amp; Chains</a></li>
+                <li><a href="/products">Highwall Miner Products</a></li>
+                <li><a href="/products">Roof Bolter Products</a></li>
+                <li><a href="/products">Shuttle Car Products</a></li>
+              </ul><!-- /.dropdown-menu -->
             </li><!-- /.dropdown -->
 
             <li class="dropdown">
