update ‘today’ copy on timeline

--- a/app/_includes/timeline.html
+++ b/app/_includes/timeline.html
@@ -135,7 +135,7 @@
                               <h3>Today</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted text-small">Today the innovative spirit continues at CMM. We have developed a conveyor chain for the High Wall miners, crawler chains for a variety of continuous miners, a tramming-conveying chain for continuous haulage systems, quick change foot shaft and stub shaft assemblies, and a new patented bit lug.</p>
+                                <p class="text-muted text-small">Today the innovative spirit continues at CMM.  By listening to our customers, believing in Continuous Improvement and Teamwork, we have the ability to develop innovative solutions to solve our customers needs. Quality and reliability will always be our driving force, today and in the future.</p>
                             </div>
                         </div>
                     </li>
