--- a/app/_includes/shared/header.html
+++ b/app/_includes/shared/header.html
@@ -33,6 +33,10 @@
           <ul class="nav navbar-nav" data-0="padding-top: 22px;" data-300="padding-top: 0;">
 
             <li class="dropdown">
+              <a href="/">Home</a>
+            </li><!-- /.dropdown -->
+
+            <li class="dropdown">
               <a class="dropdown-toggle js-activated" href="#">Products</a>
 
               <ul class="dropdown-menu">
