--- a/app/styles/page/_homepage.scss
+++ b/app/styles/page/_homepage.scss
@@ -14,6 +14,10 @@
   }
 
   #who-we-are {
+    h1 {
+      font-size: 55px;
+      color: #117156;
+    }
     .icon i.icn {
       color: #868835;
     }
