add management team photo under form with quote about service

--- a/app/_includes/contact-form.html
+++ b/app/_includes/contact-form.html
@@ -37,4 +37,20 @@
 
   </section>
 
+  <div class="row">
+
+    <div class="col-sm-6 inner-top">
+      <figure>
+        <img src="/images/mgmt-team.jpg" alt="Our Management Team">
+      </figure>
+    </div><!-- /.col -->
+
+    <div class="col-sm-6 inner-top">
+      <blockquote>
+        <p>Our Mission is to exceed our customers' expectations. Through continuous improvement, innovative thinking and time-honored values, we deliver quality, reliability and superior performance. We are THE STRONGEST LINK™ in the mining industry.</p>
+      </blockquote>
+    </div><!-- /.col -->
+
+  </div><!-- /.row -->
+
 </div><!-- ./col -->
