--- a/app/_includes/contact-form.html
+++ b/app/_includes/contact-form.html
@@ -6,7 +6,7 @@
 
     <h2>Have a general inquiry?</h2>
 
-    <form id="contactform" class="forms" action="contact.php" method="post">
+    <form id="contactform" class="forms" action="/contact.php" method="post">
 
       <div class="row">
         <div class="col-sm-6">
