test tumblr integration on gh-pages

--- a/app/_includes/landing-hero.html
+++ b/app/_includes/landing-hero.html
@@ -2,48 +2,6 @@
 
 <section id="hero">
   <div id="owl-main" class="owl-carousel height-lg owl-inner-nav owl-ui-lg">
-
-    <div class="item" style="background-image: url(/images/landing-hero-bg.jpg);">
-      <div class="container">
-        <div class="caption vertical-center text-center">
-
-          <h1 class="fadeInDown-1 light-color">Promotional Slide Title</h1>
-          <p class="fadeInDown-2 light-color">Here is a very short description of what the promotion is all about. I can be a seasonal announcement or something similar.</p>
-          <div class="fadeInDown-3">
-            <a href="/products" class="btn btn-large">Call to Action Button</a>
-          </div><!-- /.fadeIn -->
-
-        </div><!-- /.caption -->
-      </div><!-- /.container -->
-    </div><!-- /.item -->
-
-    <div class="item" style="background-image: url(/images/landing-hero-bg.jpg);">
-      <div class="container">
-        <div class="caption vertical-center text-center">
-
-          <h1 class="fadeInDown-1 light-color">Promotional Slide Title</h1>
-          <p class="fadeInDown-2 light-color">Here is a very short description of what the promotion is all about. I can be a seasonal announcement or something similar.</p>
-          <div class="fadeInDown-3">
-            <a href="/products" class="btn btn-large">Call to Action Button</a>
-          </div><!-- /.fadeIn -->
-
-        </div><!-- /.caption -->
-      </div><!-- /.container -->
-    </div><!-- /.item -->
-
-    <div class="item" style="background-image: url(/images/landing-hero-bg.jpg);">
-      <div class="container">
-        <div class="caption vertical-center text-center">
-
-          <h1 class="fadeInDown-1 light-color">Promotional Slide Title</h1>
-          <p class="fadeInDown-2 light-color">Here is a very short description of what the promotion is all about. I can be a seasonal announcement or something similar.</p>
-          <div class="fadeInDown-3">
-            <a href="/products" class="btn btn-large">Call to Action Button</a>
-          </div><!-- /.fadeIn -->
-
-        </div><!-- /.caption -->
-      </div><!-- /.container -->
-    </div><!-- /.item -->
-
   </div><!-- /.owl-carousel -->
+  <div id="hidden"></div>
 </section>
