--- a/app/_includes/shared/scripts.html
+++ b/app/_includes/shared/scripts.html
@@ -68,9 +68,12 @@
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.5.2/jquery.matchHeight-min.js"></script>
 
+<!-- build:js({app,.tmp}) /scripts/tumblr.js -->
+<script src="/js/tumblr.js"></script>
+<!-- endbuild -->
+
 <!-- build:js({app,.tmp}) /scripts/app.js -->
 <script src="/scripts/app.js"></script>
-<script src="/js/tumblr.js"></script>
 <!-- endbuild -->
 
 <!-- OnScroll CSS3 Animations for Modern Browsers and IE10+ -->
