--- a/app/styles/page/_homepage.scss
+++ b/app/styles/page/_homepage.scss
@@ -1,16 +1,23 @@
 .homepage {
-  #hero .item:before {
-    background: rgba(20,20,10, 0.75);
-    content: ' ';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-  }
 
-  #hero .btn-large {
-    font-weight: bold;
+  #hero {
+    .item:before {
+      background: rgba(20,20,10, 0.75);
+      content: ' ';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
+
+    .btn-large {
+      font-weight: bold;
+    }
+
+    #hidden {
+      display: none;
+    }
   }
 
   #who-we-are {
